#7 WIP all message parsers from common air interface ICD are implemented.