@@ -17,70 +17,64 @@
  * ****************************************************************************
  */
 
-package io.github.dsheirer.module.decode.nxdn.layer3.broadcast;
+package io.github.dsheirer.module.decode.nxdn.layer3.mobility;
 
 import io.github.dsheirer.bits.CorrectedBinaryMessage;
 import io.github.dsheirer.bits.IntField;
 import io.github.dsheirer.identifier.Identifier;
-import io.github.dsheirer.module.decode.nxdn.layer3.NXDNLayer3Message;
 import io.github.dsheirer.module.decode.nxdn.layer3.NXDNMessageType;
-import io.github.dsheirer.module.decode.nxdn.layer3.type.CallTimer;
-import io.github.dsheirer.module.decode.nxdn.layer3.type.LocationID;
-import java.util.Collections;
 import java.util.List;
 
 /**
- * Site failure status information
+ * Authentication inquiry request
  */
-public class FailureStatusInformation extends NXDNLayer3Message
+public class AuthenticationInquiryRequest extends Authentication
 {
-    private static final int LOCATION_ID = OCTET_1;
-    private static final IntField CALL_TIMER = IntField.length6(OCTET_5);
-    private LocationID mLocationID;
+    private static final IntField AUTHENTICATION_PARAMETER = IntField.length16(OCTET_6);
 
     /**
      * Constructs an instance
      *
      * @param message with binary data
      * @param timestamp for the message
+     * @param type of message
      */
-    public FailureStatusInformation(CorrectedBinaryMessage message, long timestamp)
+    public AuthenticationInquiryRequest(CorrectedBinaryMessage message, long timestamp, NXDNMessageType type)
     {
-        super(message, timestamp, NXDNMessageType.CONTROL_OUT_28_FAILURE_STATUS_INFORMATION);
+        super(message, timestamp, type);
     }
 
     @Override
     public String toString()
     {
         StringBuilder sb = new StringBuilder();
-        sb.append("FAIL-SOFT MODE ").append(getLocationID()).append(" CALL TIMER:").append(getCallTimer());
+        if(getAuthenticationOption().isEmergency())
+        {
+            sb.append("EMERGENCY ");
+        }
+        sb.append("AUTHENTICATION REQUEST FROM:").append(getSource());
+        sb.append(" TO:").append(getDestination());
+        sb.append(" PARAMETER:").append(getAuthenticationParameter());
         return sb.toString();
     }
 
-    /**
-     * Location that is in failsoft
-     */
-    public LocationID getLocationID()
+    @Override
+    protected int getLocationIdOffset()
     {
-        if(mLocationID == null)
-        {
-            mLocationID = new LocationID(getMessage(), LOCATION_ID);
-        }
-
-        return mLocationID;
+        return OCTET_8;
     }
 
     /**
-     * Call timer.
+     * Authentication parameter
      */
-    public CallTimer getCallTimer()
+    public String getAuthenticationParameter()
     {
-        return CallTimer.fromValue(getMessage().getInt(CALL_TIMER));
+        return Integer.toHexString(getMessage().getInt(AUTHENTICATION_PARAMETER)).toUpperCase();
     }
 
     @Override
     public List<Identifier> getIdentifiers()
     {
-        return Collections.emptyList();
+        return List.of(getSource(), getDestination());
     }
 }
